Fix show more layout problems

--- a/shared/scss/components/ckan/content.scss
+++ b/shared/scss/components/ckan/content.scss
@@ -139,3 +139,7 @@
 .main-content {
   margin-bottom: $padding-large-vertical;
 }
+
+.notes {
+  width: 100%;
+}
